tests/rosetta/out/C/csv-to-html-translation-5.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:05Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int split(char *s, char *sep) {
  list_string tmp1 = {0, NULL};
  int out = tmp1;
  int start = 0;
  int i = 0;
  int n = strlen(sep);
  while (i <= strlen(s) - n) {
    if (slice_string(s, i, i + n) == sep) {
      list_string tmp2 = list_string_create(1);
      tmp2.data[0] = slice_string(s, start, i);
      list_string tmp3 = concat_list_string(out, tmp2);
      out = tmp3;
      i = i + n;
      start = i;
    } else {
      i = i + 1;
    }
  }
  list_string tmp4 = list_string_create(1);
  tmp4.data[0] = slice_string(s, start, strlen(s));
  list_string tmp5 = concat_list_string(out, tmp4);
  out = tmp5;
  return out;
}

const char *htmlEscape(char *s) {
  const char *out = "";
  int i = 0;
  while (i < strlen(s)) {
    const char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, "&") == 0)) {
      char *tmp6 = concat_string(out, "&amp;");
      out = tmp6;
    } else if ((strcmp(ch, "<") == 0)) {
      char *tmp7 = concat_string(out, "&lt;");
      out = tmp7;
    } else if ((strcmp(ch, ">") == 0)) {
      char *tmp8 = concat_string(out, "&gt;");
      out = tmp8;
    } else {
      char *tmp9 = concat_string(out, ch);
      out = tmp9;
    }
    i = i + 1;
  }
  return out;
}

int main() {
  char *tmp10 =
      concat_string("Character,Speech\n",
                    "The multitude,The messiah! Show us the messiah!\n");
  char *tmp11 = concat_string(
      tmp10, "Brians mother,<angry>Now you listen here! He's not the messiah; "
             "he's a very naughty boy! Now go away!</angry>\n");
  char *tmp12 = concat_string(tmp11, "The multitude,Who are you?\n");
  char *tmp13 =
      concat_string(tmp12, "Brians mother,I'm his mother; that's who!\n");
  char *tmp14 = concat_string(
      tmp13, "The multitude,Behold his mother! Behold his mother!");
  const char *c = tmp14;
  list_int tmp15 = list_int_create(0);
  list_int rows = tmp15;
  for (int tmp16 = 0; tmp16 < split(c, "\n").len; tmp16++) {
    char *line = split(c, "\n").data[tmp16];
    rows = 0;
  }
  printf("<table>\n");
  for (int tmp17 = 0; tmp17 < rows.len; tmp17++) {
    int row = rows.data[tmp17];
    const char *cells = "";
    for (int tmp18 = 0; tmp18 < row.len; tmp18++) {
      char *cell = row.data[tmp18];
      char *tmp19 = concat_string(cells, "<td>");
      cells = tmp19 + htmlEscape(cell) + "</td>";
    }
    char *tmp20 = concat_string("    <tr>", cells);
    char *tmp21 = concat_string(tmp20, "</tr>");
    printf("%s\n", tmp21);
  }
  printf("</table>\n");
  return 0;
}
